Revert "MVP architecture added successfully."

--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".currencyapplication.currencyavailable.ui.Main">
+    tools:context=".ui.Main">
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -20,20 +20,12 @@
             >
 
             <TextView
-                android:id="@+id/openCurrencies"
-                android:hint="Available Currencies ...."
-                android:textSize="20dp"
-                android:layout_marginTop="20dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                />
-            <ProgressBar
-                android:id="@+id/progress_one"
+                android:id="@+id/recycle1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:visibility="gone"
-                android:layout_gravity="center"/>
+                android:hint="Available Currency Rates..."
+                android:textSize="20dp"
+                />
 
             <Button
                 android:layout_marginTop="20dp"
